feat(/aggregate/<path:endpoint>): forward params
