# wts/api.py
@@ -129,6 +129,9 @@ def _setup(app):
         idp: OAuth2Session(**conf) for idp, conf in app.config["OIDC"].items()
     }
     app.logger.info("Set up OIDC clients: {}".format(list(app.oauth2_clients.keys())))
+    app.logger.info(
+        "Aggregate endpoint allowlist: %s", app.config["AGGREGATE_ENDPOINT_ALLOWLIST"]
+    )
     db.init_app(app)
     app.register_blueprint(oauth2.blueprint, url_prefix="/oauth2")
     app.register_blueprint(tokens.blueprint, url_prefix="/token")
